[package]
name = "oners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
futures = "0.3.30"
graph-rs-sdk = "1.1.3"
handlebars = "5.0.0"
rand = "0.8.5"
reqwest = "0.11.23"
serde = "1.0.194"
serde_json = "1.0.110"
slint = "1.3.2"
tokio = {version = "1.35.1", features = ["full"]}
url = "2.5.0"
warp = "0.3.6"
